--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Weather - informations</title>
 </head>
 <body>
     
     <h1>From a static file</h1>
+
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
